# nv2a-trace

./: .gitignore  .gitmodules  AbortFlag.py  CMakeLists.txt  ExchangeU32.py  HTMLLog.py  KickFIFO.py  LICENSE.md  NV2ALog.py  README.md  Texture.py  Trace.py  Xbox.py  XboxHelper.py  exchange_u32  exchange_u32.asm  helper.py  kick_fifo  kick_fifo.asm  nv2a-trace.py
githooks/: pre-commit
ntrc_ddxt/: __init__.py  dxtmain.c  ntrc.py
py_dyndxt_bootstrap/: CMakeLists.txt  README.md  __init__.py  export_info.py  loader.py  py_dll_loader.c  py_dll_loader.py  xbdm_exports.py  xboxkrnl_exports.py
